Introduce lemmatization in nlp-postag function.

--- a/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
+++ b/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
@@ -12,7 +12,8 @@ NlpPosTag.description = Returns a list that contains a pair (tag word) for \
 each input word.
 NlpPosTag.tag = the POS tag.
 NlpPosTag.word = the word which tag is to be obtained.
-NlpPosTag.input_word = the input word. 
+NlpPosTag.output_word = the input word when <dictionary> is not specified, \
+otherwise the lemma of the input word. 
 NlpPosTag.FileNotFoundException = when the specified model file is not found.
 
 NlpLemmatize.synopsis = Gets the lemma of a word.
@@ -68,7 +69,5 @@ When not specified, <sentence_model_path> is assumed to be \
 <${user.home}/en-sent.bin>.\nWhen <sentence_model_path> is an empty string a \
 newline sentence detector will be used.
 dict_path = the path to the dictionary lemmatizer file. \
-When not specified, <dict_path> is assumed to be \
-<${user.home}/en-lemmatizer.dict>.\nWhen <dict_path> is an empty string no \
-lemmatization will be performed.
+When not specified, no lemmatization will be performed.
 
