Add language parameter in parse-date & format-date functions.

--- a/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
+++ b/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
@@ -104,7 +104,8 @@ Help.description = Gets help for a function in the specified format and language
 Help.func = reference to native o user function. \
 This argument is not evaluated if it is already a reference.
 Help.format = can be "string" or "list". If omitted, format is "string".
-Help.language = 2 letters representing the language of texts returned by this function. \
+Help.language = the ISO 639 alpha-2 or alpha-3 language code representing the \
+language of texts returned by this function. \
 By default, the system language is assumed.
 Help.result = a help list when format is "list" or a string when format is "string".
 
@@ -336,6 +337,8 @@ date_string = a date/time represented as string.
 date_pattern = a date pattern as specified in \
 <https://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html>. \
 When omitted, the default system date pattern is used.
+language = the ISO 639 alpha-2 or alpha-3 language code. By default, the \
+system language is assumed.
 
 Date.synopsis = Date management.
 Date.description = This function can get the current date in milliseconds \
