Introduce the depth parameter in the local-scope function.

--- a/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
+++ b/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
@@ -130,9 +130,15 @@ Local.variable = a reference to the variable to declare. \
 This argument is not evaluated if it is already a reference.
 
 LocalScope.synopsis = Returns the local scope list.
-LocalScope.description = Returns a list that contains all name/value pairs of \
-the local scope of the current context.
-LocalScope.result = a list containing all elements of specified local scope.
+LocalScope.description = Returns a list that contains all the variables \
+(name/value pairs) of the local scope of the current context.
+LocalScope.depth = is an index in the stack of local scopes. When index is 0 \
+this function returns the current local scope. If index is 1 it returns the \
+parent local scope. When index references an invalid local scope this function \
+returns null. By default, index is 0.
+
+LocalScope.result = a list that contains all the variables of the specified \
+local scope.
 
 Notify.synopsis = Notifies executors waiting for a monitor.
 Notify.description = Notifies all executors that are waiting for this monitor.
