New function set-local to assign a value to a local variable.

--- a/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
+++ b/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
@@ -129,13 +129,21 @@ Local.description = Declares the specified variables in local scope.
 Local.variable = a reference to the variable to declare. \
 This argument is not evaluated if it is already a reference.
 
+SetLocal.synopsis = Sets the value of a local variable.
+SetLocal.description = Assigns the result of evaluating the given expression \
+to the specified local variable.
+SetLocal.variable = a reference to the local variable to set. \
+This argument is not evaluated if it is already a reference.
+SetLocal.expression = the value to assign to the variable.
+SetLocal.result = the result of evaluating the expression.
+
 LocalScope.synopsis = Returns the local scope list.
 LocalScope.description = Returns a list that contains all the variables \
 (name/value pairs) of the local scope of the current context.
-LocalScope.depth = is an index in the stack of local scopes. When index is 0 \
-this function returns the current local scope. If index is 1 it returns the \
-parent local scope. When index references an invalid local scope this function \
-returns null. By default, index is 0.
+LocalScope.depth = is an index in the stack of local scopes. When <depth> is 0 \
+this function returns the current local scope. If <depth> is 1 it returns the \
+parent local scope. When <depth> references an invalid local scope this \
+function returns null. By default, <depth> is 0.
 
 LocalScope.result = a list that contains all the variables of the specified \
 local scope.
@@ -194,6 +202,7 @@ Set.description = Assigns the result of evaluating the given expression to \
 the specified variable.
 Set.variable = a reference to the variable to set. \
 This argument is not evaluated if it is already a reference.
+Set.expression = the value to assign to the variable.
 Set.result = the result of evaluating the expression.
 
 Sleep.synopsis = Pauses execution.
