Fix help of database library.

--- a/brain4it-lib/brain4it-lib-database/src/main/resources/org/brain4it/lib/DatabaseLibrary.properties
+++ b/brain4it-lib/brain4it-lib-database/src/main/resources/org/brain4it/lib/DatabaseLibrary.properties
@@ -34,7 +34,7 @@ DatabaseExecute.synopsis = Executes a SQL statement.
 DatabaseExecute.description = Executes the specified <sql> statament using the \
 connection identified by <connection_id>. If <sql> is a SELECT statement then \
 <result> will be a list containing the rows returned by the query. When <sql> \
-is a change statement (INSERT, UPDATE od DELETE) this function \
+is a change statement (INSERT, UPDATE or DELETE) this function \
 will return the number of rows that were modified.
 DatabaseExecute.result = a list containing the data returned by the \
 SELECT statement or the number of rows modified by the sql statement.
