Add the auto-scroll property in EditText widgets.

--- a/brain4it-manager/brain4it-manager-common/src/main/resources/org/brain4it/manager/widgets/resources/Widgets.properties
+++ b/brain4it-manager/brain4it-manager-common/src/main/resources/org/brain4it/manager/widgets/resources/Widgets.properties
@@ -18,6 +18,10 @@ display.font-family = the font family of the text. Supported values are "lcd", \
 display.get-value = the exterior function that provides the text to show.
 
 editText = A component to edit text.
+editText.auto-scroll = the type of automatic vertical scrolling to apply \
+when the text of this widget is changed. Its value can be "top" to scroll top \
+or "bottom" to scroll bottom. Any other value maintains the previous scroll \
+position.
 editText.label =  the text to show above the edit box. \
 By default label is an empty string.
 editText.font-family = the font family of the text. \
