Show error when loading a dashboard with invalid format.

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
@@ -126,3 +126,5 @@ ModuleNameMandatory=Module name is mandatory
 InvalidURL=Invalid URL
 ImportCompleted=Import completed.
 ExportCompleted=Export completed.
+NoDashboards=This module has no dashboards.
+InvalidDashboardFormat=Invalid dashboard format!
