Option to set the content type of an email message in smtp function.

--- a/brain4it-lib/brain4it-lib-mail/src/main/resources/org/brain4it/lib/MailLibrary.properties
+++ b/brain4it-lib/brain4it-lib-mail/src/main/resources/org/brain4it/lib/MailLibrary.properties
@@ -1,6 +1,8 @@
 Smtp.synopsis = Sends an email through the SMTP protocol.
 Smtp.host = the SMTP host.
-Smtp.port = the SMTP port (typically 25).
+Smtp.port = the SMTP port (25 by default).
+Smtp.properties = a name/value pair list containing the connection properties \
+"mail.smtp.host" and "mail.smtp.port".
 Smtp.from = the sender email address. 
 Smtp.to = a string or a list of strings representing the recipient addresses.
 Smtp.cc = a string or a list of strings representing the carbon copy recipient \
@@ -8,7 +10,9 @@ addresses.
 Smtp.bcc = a string or a list of strings representing the blind carbon copy \
 recipient addresses.
 Smtp.subject = the subject of the message.
-Smtp.body = the body of the message in plain text.
+Smtp.body = the body of the message (text format).
+Smtp.content_type = the content type of the <body>. \
+It is "text/plain; charset=UTF-8" by default.
 Smtp.username = the username of the smtp account.
 Smtp.password = the password of the smtp account.
 Smtp.description = Sends a text message to the given recipients through \
@@ -16,7 +20,7 @@ the specified SMTP service.
 
 Imap.synopsis = Reads messages from an IMAP account.
 Imap.host = the IMAP host.
-Imap.port = the IMAP port (typically 143).
+Imap.port = the IMAP port (143 by default).
 Imap.username = the username of the imap account.
 Imap.password = the password of the imap account.
 Imap.start = the index of the first message to retrieve. By default is 0.
