Fix security problem in calls to exterior functions. - Only user functions can be invoked as exterior functions. - The function data argument is quoted to avoid code injection. - New remote-call function to call remote exterior functions.

--- a/brain4it-server/brain4it-server-common/src/main/resources/org/brain4it/lib/ModuleLibrary.properties
+++ b/brain4it-server/brain4it-server-common/src/main/resources/org/brain4it/lib/ModuleLibrary.properties
@@ -95,8 +95,14 @@ code contained in the <stop> variable is executed. That code may release \
 resources and force the termination of the running executors. \
 After the execution of <stop>, all remaining executors are killed. 
 
-
-
-
-
-
+RemoteCall.synopsis = Calls a remote exterior function.
+RemoteCall.function_url = The url of the exterior function to call. The url \
+format can be <protocol://host:port/path_to_function> or \
+<module:path_to_function> where <module> is a name defined in \
+<setup/remote-modules> list that points to the module url.
+RemoteCall.args = The arguments to pass to the function. When more than one \
+argument is specified, all them are added to a list that will be passed to the \
+exterior function as the data argument.
+RemoteCall.result = the value returned by the exterior function or null if \
+the specified function is not an exterior function.
+RemoteCall.description = Calls a remote external function referenced by a url.
