Improvements remote-call function. - Fix NullPointerException - Set connect and read timeout. - Improve help.

--- a/brain4it-server/brain4it-server-common/src/main/resources/org/brain4it/lib/ModuleLibrary.properties
+++ b/brain4it-server/brain4it-server-common/src/main/resources/org/brain4it/lib/ModuleLibrary.properties
@@ -102,7 +102,10 @@ format can be <protocol://host:port/path_to_function> or \
 <setup/remote-modules> list that points to the module url.
 RemoteCall.args = The arguments to pass to the function. When more than one \
 argument is specified, all them are added to a list that will be passed to the \
-exterior function as the data argument.
+exterior function as the <data> argument.
 RemoteCall.result = the value returned by the exterior function or null if \
 the specified function is not an exterior function.
-RemoteCall.description = Calls a remote external function referenced by a url.
+RemoteCall.description = Calls a remote exterior function referenced by \
+<function_url> passing the given arguments evaluated locally. \
+The connect and read timeout are 10 and 30 seconds respectively. <remote-call> \
+can only invoke exterior functions that return a response in BPL format.
