--- a/brain4it-lib/brain4it-lib-neural/pom.xml
+++ b/brain4it-lib/brain4it-lib-neural/pom.xml
@@ -14,13 +14,6 @@
   <name>brain4it-lib-neural</name>
   <description>brain4it neural networks library</description>
 
-  <repositories>
-    <repository>
-      <id>neuroph.sourceforge.net</id>
-      <url>http://neuroph.sourceforge.net/maven2/</url>
-    </repository>        
-  </repositories>
-
   <dependencies>
     <dependency>
       <groupId>org.brain4it</groupId>
@@ -28,9 +21,9 @@
       <version>${brain4it-version}</version>
     </dependency>
     <dependency>
-      <groupId>org.neuroph</groupId>
+      <groupId>com.github.neuroph</groupId>
       <artifactId>neuroph-core</artifactId>
-      <version>2.96</version>
+      <version>2.98</version>
     </dependency>
   </dependencies>
 
