Add a "duplicate server" action in swing manager
It easies the process of creating a new server representation
when fields are very similar to a previous server. It opens a dialog
with the info of the existing server.

It avoids copying each field one by one using "Edit server" many times.

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
@@ -10,6 +10,8 @@ SaveWorkspaceAs=Save workspace as...
 
 EditServer=Edit server...
 AddServer=Add server...
+DuplicateServer=Duplicate server...
+DuplicatedServerSuffix=(Copy)
 AddModule=Add module...
 CloseTabs=Close tabs
 RemoveNode=Remove
