Replace "..." with ellypsis char '…' or \u2026

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
@@ -4,21 +4,21 @@ View=View
 Help=Help
 
 NewWorkspace=New workspace
-OpenWorkspace=Open workspace...
+OpenWorkspace=Open workspace\u2026
 SaveWorkspace=Save workspace
-SaveWorkspaceAs=Save workspace as...
+SaveWorkspaceAs=Save workspace as\u2026
 
-EditServer=Edit server...
-AddServer=Add server...
-DuplicateServer=Duplicate server...
+EditServer=Edit server\u2026
+AddServer=Add server\u2026
+DuplicateServer=Duplicate server\u2026
 DuplicatedServerSuffix=(Copy)
-AddModule=Add module...
+AddModule=Add module\u2026
 CloseTabs=Close tabs
 RemoveNode=Remove
 RefreshNode=Refresh
-CreateModule=Create module...
+CreateModule=Create module\u2026
 DestroyModule=Destroy module
-EditModule=Edit module...
+EditModule=Edit module\u2026
 ListModules=List modules
 OpenConsole=Console
 OpenEditor=Editor
@@ -29,12 +29,12 @@ SplitHorizontal=Split horizontal
 CloseSplit=Close split
 RenameWorkspace=Rename
 Documentation=Documentation
-Preferences=Preferences...
+Preferences=Preferences\u2026
 RenameData=Rename data
 DeleteData=Delete data
-ExportModule=Export module...
-ImportModule=Import module...
-About=About...
+ExportModule=Export module\u2026
+ImportModule=Import module\u2026
+About=About\u2026
 Exit=Exit
 
 Accept=Accept
