--- a/brain4it-lib/brain4it-lib-kafka/pom.xml
+++ b/brain4it-lib/brain4it-lib-kafka/pom.xml
@@ -8,4 +8,35 @@
     </parent>
     <artifactId>brain4it-lib-kafka</artifactId>
     <packaging>jar</packaging>
+      
+  <name>brain4it-lib-kafka</name>
+  <description>brain4it kafka library</description>
+    <dependencies>
+        <dependency>
+      <groupId>org.brain4it</groupId>
+      <artifactId>brain4it-lib-core</artifactId>
+      <version>${brain4it-version}</version>
+    </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>1.0.1</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+      <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <mainClass>org.brain4it.local.Console</mainClass>
+          <arguments>
+            <argument>Xmpp</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
