Update kafka consumer
- unsubscribe at unload
- add optional parameter group-id

--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -5,6 +5,10 @@ KafkaConsumer.servers = String URL of the Kafka server, or list of strings of\
 some of the servers of the cluster.
 KafkaConsumer.key_deserializer = Class name of the message value deserializer.
 KafkaConsumer.value_deserializer = Class name of the message key deserializer.
+KafkaConsumer.group_id = Name of the consumer group to join. Useful to \
+distribute among different consumers the processing workload of messages from \
+a given topic. If you want to receive all messages from the subscribed topics \
+at this consumer, leave it blank to join a random, unique consumer group.
 KafkaConsumer.consumer_id = The application id to be used with <kafka-poll> \
 and <kafka-delete-app>.
 
