Add kafka-subscribe function

--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -92,3 +92,12 @@ KafkaSend.messages = Object acording to producer's value-serializer, or List \
 of Objects. If a list element is named, this name is used as Kafka's \
 message key, which is left unset or null otherwise. The message value is \
 always the list element.
+
+KafkaSubscribe.synopsis = Reset consumer subscriptions to the given topics
+KafkaSubscribe.description = Replace the current subscriptions for the given \
+consumer with the provided topic list.
+KafkaPoll.consumer_id = Identifier of the consumer to use, provided by \
+<kafka-consumer>
+KafkaSubscribe.topics = String name of the topic, or List of topics to \
+subscribe the consumer to. An empty list <()> unsubscribes from all current \
+subscribed topics.
