--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -20,9 +20,8 @@ KafkaCreateTopics.servers = String URL of the Kafka server, or list of strings o
 some of the servers of the cluster.
 KafkaCreateTopics.topics = Name of the topic or topics to create. String or \
 list of strings.
-KafkaCreateTopics.result = named BList showing wether a topic was created \
-(true), was already present (false), or otherwise (false).
-
+KafkaCreateTopics.result = named list showing whether a topic was created \
+(true), was already present (false), or something else (false).
 
 KafkaDeleteApp.synopsis = Closes resources and forgets a consumer or producer
 KafkaDeleteApp.description = If the app is a consumer, it will unsubscribe it \
@@ -33,6 +32,15 @@ KafkaDeleteApp.app_id = The application id provided by <kafka-producer> or \
 KafkaDeleteApp.deleted = True when no errors were found during deletion. False \
 if some exception prevented finishing the operation.
 
+KafkaDeleteTopics.synopsis = Delete topics from the kafka cluster 
+KafkaDeleteTopics.description = Deletes, if existing, the topics provided by \
+<topics>, from the Kafka cluster reachable through <servers>.
+KafkaDeleteTopics.servers = String URL of the Kafka server, or list of strings of\
+some of the servers of the cluster.
+KafkaDeleteTopics.topics = Name of the topic or topics to delete. String or \
+list of strings.
+KafkaDeleteTopics.result = named list showing whether a topic was deleted \
+(true), didn't already exist (false), or some error ocurred (false).
 
 KafkaDeleteTopics.synopsis
 KafkaDeleteTopics.description
