Update docs on kafka-list-topics and other minor

--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -42,19 +42,13 @@ list of strings.
 KafkaDeleteTopics.result = named list showing whether a topic was deleted \
 (true), didn't already exist (false), or some error ocurred (false).
 
-KafkaDeleteTopics.synopsis
-KafkaDeleteTopics.description
-KafkaDeleteTopics
-KafkaDeleteTopics
-KafkaDeleteTopics
-
-
-KafkaListTopics.synopsis
-KafkaListTopics.description
-KafkaListTopics
-KafkaListTopics
-KafkaListTopics
-
+KafkaListTopics.synopsis = Lists all topics in the Kafka cluster
+KafkaListTopics.description = Lists all existing topics in the Kafka cluster. \
+Useful to double-check that a topic was deleted or created, to get an \
+overview of which applications are running, for instance.
+KafkaListTopics.servers = String URL of the Kafka server, or list of strings of\
+some of the servers of the cluster.
+KafkaListTopics.topics = List of string names of all current topics.
 
 KafkaPoll.synopsis = Receives messages through a consumer
 KafkaPoll.description = Subscribes the consumer to specified <topics> and does a \
@@ -66,18 +60,6 @@ and listen to.
 KafkaPoll.timeout = Time to wait without receiving any message before ending \
 the execution of the function.
 
-KafkaSend.synopsis = Send messages to topics through a producer
-KafkaSend.description = Sends all given <messages> to all given <topics>, \
-using the producer identified by <producer-id>
-KafkaSend.producer_id = Identifier of the producer to use, \
-provided by <(kafka-producer)>
-KafkaSend.topics = String name of the topic, or List of topics to send the \
-messages to. All topics will receive the same message/s.
-KafkaSend.messages = Object acording to producer's value-serializer, or List \
-of Objects. If a list element is named, this name is used as Kafka's \
-message key, which is left unset or null otherwise. The message value is \
-always the list element.
-
 KafkaProducer.synopsis = Creates and registers locally a Kafka producer object
 KafkaProducer.description = Instantiates a Kafka producer client wihout \
 communicating to the Kafka server.
@@ -87,7 +69,6 @@ KafkaProducer.key_serializer = Class name of the message key serializer.
 KafkaProducer.value_serializer = Class name of the message value serializer.
 KafkaProducer.producer_id = The application id to be used with <kafka-send> \
 and <kafka-delete-app>.
-
 
 KafkaSend.synopsis = Send messages to topics through a producer
 KafkaSend.description = Sends all given <messages> to all given <topics>, \
