--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -57,6 +57,8 @@ KafkaPoll.consumer_id = Identifier of the consumer to use, provided by \
 <(kafka-consumer)>
 KafkaPoll.timeout = Time to wait without receiving any message before ending \
 the execution of the function.
+KafkaPoll.messages = List of elements named by each subscribed topic, where \
+each value is a sublist of messages received from that topic.
 
 KafkaProducer.synopsis = Creates and registers locally a Kafka producer object
 KafkaProducer.description = Instantiates a Kafka producer client wihout \
