Fixes in Kafka lib documentation.

--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -1,7 +1,7 @@
 KafkaConsumer.synopsis = Creates and registers locally a Kafka consumer object
 KafkaConsumer.description = Instantiates a Kafka consumer client wihout \
 communicating to the Kafka server.
-KafkaConsumer.servers = String URL of the Kafka server, or list of strings of\
+KafkaConsumer.servers = String URL of the Kafka server, or list of strings of \
 some of the servers of the cluster.
 KafkaConsumer.key_deserializer = Class name of the message value deserializer.
 KafkaConsumer.value_deserializer = Class name of the message key deserializer.
@@ -16,8 +16,8 @@ KafkaCreateTopics.synopsis = Creates topics to send to or receive messages from
 KafkaCreateTopics.description = Creates, if not existing, the topics provided \
 by <topics> in the Kafka cluster reachable through <servers>. Partition number \
 and replication factor is set to 1, values adapted to a single-broker cluster.
-KafkaCreateTopics.servers = String URL of the Kafka server, or list of strings of\
-some of the servers of the cluster.
+KafkaCreateTopics.servers = String URL of the Kafka server, or list of strings \
+of some of the servers of the cluster.
 KafkaCreateTopics.topics = Name of the topic or topics to create. String or \
 list of strings.
 KafkaCreateTopics.result = named list showing whether a topic was created \
@@ -55,7 +55,7 @@ KafkaPoll.description = Subscribes the consumer to specified <topics> and does a
 long poll to the server of duration <timeout>.
 KafkaPoll.consumer_id = Identifier of the consumer to use, provided by \
 <(kafka-consumer)>
-KafkaPoll.timeout = Time to wait without receiving any message before ending \
+KafkaPoll.timeout_ms = Time to wait without receiving any message before ending \
 the execution of the function.
 KafkaPoll.messages = List of elements named by each subscribed topic, where \
 each value is a sublist of messages received from that topic.
@@ -85,8 +85,8 @@ always the list element.
 KafkaSubscribe.synopsis = Reset consumer subscriptions to the given topics
 KafkaSubscribe.description = Replace the current subscriptions for the given \
 consumer with the provided topic list.
-KafkaPoll.consumer_id = Identifier of the consumer to use, provided by \
+KafkaSubscribe.consumer_id = Identifier of the consumer to use, provided by \
 <kafka-consumer>
-KafkaSubscribe.topics = String name of the topic, or List of topics to \
+KafkaSubscribe.desired-topics = String name of the topic, or List of topics to \
 subscribe the consumer to. An empty list <()> unsubscribes from all current \
 subscribed topics.
