--- a/brain4it-manager/brain4it-manager-swing/pom.xml
+++ b/brain4it-manager/brain4it-manager-swing/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -9,13 +9,13 @@
     <artifactId>brain4it-manager</artifactId>
     <version>1.0</version>
   </parent>
-      
+
   <artifactId>brain4it-manager-swing</artifactId>
   <packaging>jar</packaging>
-  
+
   <name>brain4it-manager-swing</name>
   <description>brain4it desktop manager application</description>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.brain4it</groupId>
@@ -23,7 +23,7 @@
       <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
-	
+
   <build>
     <plugins>
       <plugin>
@@ -75,6 +75,14 @@
         <version>1.2.1</version>
         <configuration>
           <mainClass>org.brain4it.manager.swing.ManagerApp</mainClass>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <showDeprecation>true</showDeprecation>
         </configuration>
       </plugin>
     </plugins>
