--- a/brain4it-server/brain4it-server-swing/pom.xml
+++ b/brain4it-server/brain4it-server-swing/pom.xml
@@ -123,9 +123,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.6.0</version>
         <configuration>
-          <descriptor>assembly.xml</descriptor>
           <finalName>brain4it-server-swing-${project.version}</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <descriptors>
+            <descriptor>assembly.xml</descriptor>
+          </descriptors>
         </configuration>
         <executions>
           <execution>
