--- a/brain4it-manager/brain4it-manager-swing/pom.xml
+++ b/brain4it-manager/brain4it-manager-swing/pom.xml
@@ -58,7 +58,9 @@
               <mainClass>org.brain4it.manager.swing.ManagerApp</mainClass>
             </manifest>
           </archive>
-          <descriptor>assembly.xml</descriptor>
+          <descriptors>
+            <descriptor>assembly.xml</descriptor>
+          </descriptors>
         </configuration>
         <executions>
           <execution>
@@ -82,7 +84,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <showDeprecation>true</showDeprecation>
+          <showDeprecation>false</showDeprecation>
         </configuration>
       </plugin>
     </plugins>
