--- a/brain4it-server/brain4it-server-raspberrypi/pom.xml
+++ b/brain4it-server/brain4it-server-raspberrypi/pom.xml
@@ -26,7 +26,7 @@
       <version>1.2</version>
     </dependency>
   </dependencies>
-  
+
   <profiles>
     <profile>
       <id>full</id>
@@ -128,9 +128,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.6.0</version>
         <configuration>
-          <descriptor>assembly.xml</descriptor>
           <finalName>brain4it-server-raspberrypi-${project.version}</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <descriptors>
+            <descriptor>assembly.xml</descriptor>
+          </descriptors>
         </configuration>
         <executions>
           <execution>
