--- a/brain4it-server/pom.xml
+++ b/brain4it-server/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>			
+      <version>4.13.1</version>
     </dependency>
   </dependencies>
 
@@ -31,7 +31,15 @@
     <module>brain4it-server-swing</module>
     <module>brain4it-server-raspberrypi</module>
     <module>brain4it-server-web</module>
-    <module>brain4it-server-android</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>android</id>
+      <modules>
+        <module>brain4it-server-android</module>
+      </modules>
+    </profile>
+  </profiles>
 
 </project>
