Improve the remote-call function. -Calls to functions defined in the same server as the calling code are executed locally without the overhead of an HTTP request. -Request headers can be specified in the function call.

--- a/brain4it-server/brain4it-server-common/src/main/resources/org/brain4it/lib/ModuleLibrary.properties
+++ b/brain4it-server/brain4it-server-common/src/main/resources/org/brain4it/lib/ModuleLibrary.properties
@@ -32,7 +32,7 @@ ModuleMonitor.module_name = The module name.
 ModuleMonitor.function_name = The name of the exterior function to monitor.
 ModuleMonitor.listener = The listener function that will be called when the \
 value returned by the exterior function changes. This listerer takes 3 \
-parameters: (function_name value server_time). 
+parameters: (function_name value server_time).
 ModuleMonitor.polling_interval = The polling interval in milliseconds.
 ModuleMonitor.access_key = The access key that will be sent to the server.
 ModuleMonitor.result = "registered" when the listener is added, \
@@ -63,7 +63,7 @@ ModuleSave.snapshot_name = the name of the snapshot that is going to be saved. \
 When omitted, the default snapshot name ('head') is used.
 ModuleSave.backup = when true, a copy of the specified snapshot is made \
 before it is overwritten. The name of that copy is <snapshot_name> followed by \
-the current date and time. By default, <backup> is false. 
+the current date and time. By default, <backup> is false.
 ModuleSave.result = a text indicating that the module has been saved.
 ModuleSave.description = Saves all data of the current module into persistent \
 storage with the name <snapshot_name>. This function do not stops running \
@@ -93,19 +93,33 @@ ModuleStop.result = a text indicating that the current module has been stopped.
 ModuleStop.description = Stops the current module. When stopping a module, the \
 code contained in the <stop> variable is executed. That code may release \
 resources and force the termination of the running executors. \
-After the execution of <stop>, all remaining executors are killed. 
+After the execution of <stop>, all remaining executors are killed.
 
-RemoteCall.synopsis = Calls a remote exterior function.
-RemoteCall.function_url = The url of the exterior function to call. The url \
-format can be <protocol://host:port/path_to_function> or \
-<module:path_to_function> where <module> is a name defined in \
-<setup/remote-modules> list that points to the module url.
+RemoteCall.synopsis = Calls an exterior function.
+RemoteCall.function_setup = A list containing the properties that describe the \
+exterior function to call. These properties are <url>, <request-headers>, \
+<tenant>, <module> and <function>. When <function_setup> contains the <url> \
+property, an HTTP request is performed to call the function, otherwise the \
+function is invoked locally, assuming that it is defined in the same server as \
+the calling code. <function_setup> can also be a string representing the url \
+of the exterior function to call. That url accepts 2 formats: \
+<protocol://host:port/path_to_function> or \
+<module_alias:path_to_function> where <module_alias> is a name defined in the \
+<setup/remote-modules> list whose value points to the module url.
+RemoteCall.url = The url of the exterior function.
+RemoteCall.request_headers = The http request headers (name/value pairs).
+RemoteCall.tenant = The tenant name of the exterior function. \
+If omitted, the same tenant of the calling code is assumed.
+RemoteCall.module = The module name of the exterior function. \
+If omitted, the same module of the calling code is assumed.
+RemoteCall.function = The path of the exterior function to call.
 RemoteCall.arg = The argument to pass to the function. When more than one \
 argument is specified, all them are added to a list that will be passed to the \
 exterior function <(function (ctx data) ...)> as the <data> argument.
-RemoteCall.result = the value returned by the exterior function or null if \
-the specified function is not an exterior function.
-RemoteCall.description = Calls a remote exterior function referenced by \
-<function_url> passing the given arguments evaluated locally. \
-The connect and read timeout are 10 and 30 seconds respectively. <remote-call> \
-can only invoke exterior functions that return a response in BPL format.
+RemoteCall.result = the value returned by the exterior function expressed \
+in BPL format or null if the specified function is not an exterior function.
+RemoteCall.description = Calls the exterior function specified in \
+<function_setup> passing the given arguments evaluated locally. When the \
+function is called through the HTTP protocol, the connect and read timeout are \
+10 and 30 seconds respectively. <remote-call> can only invoke exterior \
+functions that return a response in BPL format.
