--- a/brain4it-server/brain4it-server-standalone/pom.xml
+++ b/brain4it-server/brain4it-server-standalone/pom.xml
@@ -95,7 +95,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
-              <descriptor>assembly.xml</descriptor>
+              <descriptiors>
+                <descriptor>assembly.xml</descriptor>
+              </descriptiors>
               <finalName>brain4it-server-standalone-full-${project.version}</finalName>
             </configuration>
             <executions>
